# lib/httpServer/index.js
@@ -164,7 +164,7 @@ class HttpServer {
                 if (!operator.checkWalletPassword(walletId, passwordHash)) throw new HTTPError(403, `Invalid password for wallet '${walletId}'`);
 
                 let newAddress = operator.generateAddressForWallet(walletId);
-                res.status(201).send(newAddress);
+                res.status(201).send({ address: newAddress });
             } catch (ex) {
                 if (ex instanceof ArgumentError) throw new HTTPError(400, ex.message, walletId, ex);
                 else throw ex;
@@ -177,7 +177,7 @@ class HttpServer {
 
             try {
                 let balance = operator.getBalanceForWalletAddress(walletId, addressId);
-                res.status(200).send(balance.toString());
+                res.status(200).send({ balance: balance });
             } catch (ex) {
                 if (ex instanceof ArgumentError) throw new HTTPError(400, ex.message, { walletId, addressId }, ex);
                 else throw ex;
@@ -196,7 +196,7 @@ class HttpServer {
         this.app.get('/node/transactions/:transactionId([a-zA-Z0-9]{64})/confirmations', (req, res) => {
             node.getConfirmations(req.params.transactionId)
                 .then((confirmations) => {
-                    res.status(200).send(confirmations.toString());
+                    res.status(200).send({ confirmations: confirmations });
                 });
         });
 
